--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Container -->
+    <div class="container">
+        <div class="header-container">
+            <h1>Campo Minato</h1>
+            <button id="btn-play">Play</button>
+        </div>
+        <div class="main-container">
+            <div class="grid">
+                <!-- <div class="square active">1</div> -->
+            </div>
+        </div>
+        <div class="footer-container">
+            <h4>Make with &hearts; by Antonio Locorotondo</h4>
+        </div>
+    </div>
+    <!-- /Container -->
 
     <!-- Script -->
     <script src="js/script.js"></script>
