--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
     <div class="container">
         <div class="header-container">
             <h1>Campo Minato</h1>
-            <button id="btn-play">Play</button>
+            <div class="control">
+                <span>Difficoltà:</span>
+                <select name="" id="difficulty">
+                    <option value="100">Easy</option>
+                    <option value="81">Medium</option>
+                    <option value="49">Hard</option>
+                </select>
+                <button id="btn-play">Play</button>
+            </div>
         </div>
         <div class="main-container">
             <div class="grid">
