Added Main title

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             </div>
         </div>
         <div class="main-container">
-            <div class="grid">
+            <h1 id="main-title">Clicca il tasto play e genera la griglia!</h1>
+            <div class="grid hidden">
                 <!-- <div class="square active">1</div> -->
             </div>
         </div>
